sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:4: error: not found: value getTroubase
    if (getCouleurJoueur(getTroubase+1,0)< getCouleurJoueur(getTroubase+1,1)) {
                         ^NaiveBaseball:4: error: not found: value getTroubase
    if (getCouleurJoueur(getTroubase+1,0)< getCouleurJoueur(getTroubase+1,1)) {
                                                            ^