sort.baseball.NaiveBaseball.scala.code
var mem = 0
override def run() {
  while(!estTrie) {
    if (getCouleurJoueur(getTroubase+1,0)< getCouleurJoueur(getTroubase+1,1)) {
      deplace(getTrouBase+1,1)
    }
  }
}